--- a/notary-site/package.json
+++ b/notary-site/package.json
@@ -1,40 +1,36 @@
 {
   "name": "notary-site",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "prebuild": "node scripts/prebuild-services.js",
-    "build": "npm run prebuild && vite build",
-    "build:skip-prebuild": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "check:optimization": "node scripts/check-optimization.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prebuild": "node scripts/prebuild-services.js"
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
     "@supabase/supabase-js": "^2.76.1",
+    "next": "^15.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.9.4"
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "critters": "^0.0.24",
+    "@types/node": "^22.10.2",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
+    "eslint-config-next": "^15.1.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "terser": "^5.44.0",
-    "vite": "^7.1.7",
-    "vite-imagetools": "^9.0.0"
+    "typescript": "^5.7.2"
   }
 }
