--- a/notary-site/.eslintrc.json
+++ b/notary-site/.eslintrc.json
@@ -1,4 +1,17 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "env": {
+    "node": true,
+    "browser": true,
+    "es2021": true
+  },
+  "rules": {
+    "no-unused-vars": ["error", { 
+      "varsIgnorePattern": "^[A-Z_]",
+      "argsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_"
+    }],
+    "no-undef": "off"
+  }
 }
 
