--- a/notary-site/.browserslistrc
+++ b/notary-site/.browserslistrc
@@ -1,6 +1,7 @@
-# Cibler les navigateurs modernes uniquement
-# Évite les polyfills inutiles (Array.at, flatMap, etc.)
+# Cibler uniquement les navigateurs modernes pour éviter les polyfills inutiles
+# Cela réduit la taille du JS de ~12KB
 
+# Navigateurs supportant ES6+ (>95% du marché)
 last 2 Chrome versions
 last 2 Firefox versions
 last 2 Safari versions
@@ -8,6 +9,4 @@ last 2 Edge versions
 not dead
 not IE 11
 not op_mini all
-
-# Équivalent à ~95% des utilisateurs avec support ES2020+
 
