Fix: add critters as dependency for optimizeCss

--- a/notary-site/package.json
+++ b/notary-site/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "critters": "^0.0.25",
     "@supabase/supabase-js": "^2.76.1",
     "next": "^15.1.0",
     "react": "^19.1.1",
