--- a/notary-site/package.json
+++ b/notary-site/package.json
@@ -11,6 +11,7 @@
     "prebuild": "node scripts/prebuild-services.js"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.10.2",
     "@iconify/react": "^6.0.2",
     "critters": "^0.0.25",
     "@supabase/supabase-js": "^2.76.1",
